[gd_scene load_steps=5 format=2]

[ext_resource path="res://Texture/Sprite/Bullet.png" type="Texture" id=1]
[ext_resource path="res://Script/Fireball.gd" type="Script" id=2]
[ext_resource path="res://SFX/fire_burst.ogg" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.5, 4 )

[node name="Fireball" type="Area2D"]
collision_mask = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 0 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="AliveTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="FireballSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
autoplay = true

[connection signal="body_entered" from="." to="." method="_on_Fireball_body_entered"]
[connection signal="timeout" from="AliveTimer" to="." method="_on_AliveTimer_timeout"]
